k8s/createResources/deploy_autoscaling.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bangok
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bangok-pod
  template:
    metadata:
      labels:
        app: bangok-pod
    spec:
      containers:
        - name: bangok
          image: ihorstoner/bangok:latest
          ports:
            - containerPort: 80
