k8s/createResources/ingress_controller.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bangok
  labels:
    app: bangok-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bangok-pod
  template:
    metadata:
      labels:
        app: bangok-pod
    spec:
      containers:
        - name: bangok
          image: ihorstoner/bangok:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: bangok-service
  labels:
    app: bangok-service
spec:
  type: ClusterIP
  selector:
    app: bangok-pod
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bangok-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: www.beautyhouse.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bangok-service
                port:
                  number: 80
